# server/common/api.yml
@@ -99,7 +99,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetUserResponse"
   
-  /url/add-url:
+  /url/add:
     post:
       tags:
         - Url Service
@@ -119,7 +119,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AddUrlResponse"
  
-  # /url/get-all-url:
+  # /url/get-all:
   #   get:
   #     tags:
   #       - Url Service
@@ -133,7 +133,7 @@ paths:
   #             schema:
   #               $ref: "#/components/schemas/GetAllUrlResponse"
 
-  /url/get-url:
+  /url/get:
     get:
       tags:
         - Url Service
@@ -153,7 +153,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AddUrlResponse"
   
-  /url/delete-url:
+  /url/delete:
     post:
       tags:
         - Url Service
@@ -173,7 +173,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AddUrlResponse"
   
-  /url/update-url:
+  /url/update:
     post:
       tags:
         - Url Service
@@ -193,7 +193,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AddUrlResponse"
   
-  /url/redirect-url/{shorturl}:
+  /url/redirect/{shorturl}:
     get:
       tags:
         - Url Service
